# fasthtml-deploy

./: Dockerfile  README.md  fastHTML_main2.py  index.html  main.py  pyproject.toml
css/: grid.css  style.css
js/: style.js
